src/objects/FieldExperienceProcess__c.object
<CustomObject>
    <fields>
        <fullName>ObservationCompetencies__c</fullName>
        <label>Observation Competencies</label>
        <picklist>
            <picklistValues>
                <fullName>Start of Lesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Explanation and Demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Environment and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explanation or Demonstration of Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching Performance Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Appearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Communicator: Listening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Communicator: Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Personality: Personal Trait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Personality: Social Warmth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Work Ethic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Problem Solver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reflective Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethical Practitioner: Attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethical Practitioner: Interactions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ObservationDate__c</fullName>
        <description>Indicates date the observation/evaluation took place</description>
        <inlineHelpText>Indicates date the observation/evaluation took place</inlineHelpText>
        <label>Observation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ObservationFinalURL__c</fullName>
        <formula>&quot;https://wguir.us.qualtrics.com/SE/?SID=&quot; &amp; Substitute(
	 	    if(NewProfessionalDomain__c , &quot;SV_00Yqm81DKoHNvCZ&quot; , 
		case(Student__r.ProgramCode__c,&quot;EDL&quot;,&quot;SV_07mJcQebrOF0n0p&quot;, 
		&quot;ENDELL&quot;, &quot;SV_3f6BHw34Bt1rjAo&quot;,
                &quot;ENDEDL&quot;,&quot;SV_07mJcQebrOF0n0p&quot;,
                &quot;MSEDL&quot;,&quot;SV_07mJcQebrOF0n0p&quot;,
		&quot;MAELL&quot;, &quot;SV_3f6BHw34Bt1rjAo&quot;, 
		&quot;MAELLP12&quot;,&quot;SV_3f6BHw34Bt1rjAo&quot;,
		&quot;MSSP&quot;,&quot;SV_0CGfcj1najEnZE9&quot;,
		&quot;BASP&quot;,&quot;SV_00Yqm81DKoHNvCZ&quot;,
		&quot;SV_001GqfgmkKapMhf&quot;
		)
	      )
&amp; &quot;&amp;sfFieldExperience=&quot; &amp; FieldExperience__r.Id &amp; &quot;&amp;sfName=&quot; &amp; Substitute(StudentFullName__c,&apos; &apos;,&apos;%20&apos;) &amp; &quot;&amp;sfCSEmail=&quot; &amp; ClinicalSupervisor__r.Email &amp; &quot;&amp;sfHTEmail=&quot; &amp; HostTeacher__r.Email &amp; &quot;&amp;sfStuEmail=&quot; &amp; Student__r.Email &amp; &quot;&amp;sfState=&quot; &amp; text(FieldExperience__r.State__c) &amp; &quot;&amp;sfProgram=&quot;&amp; StudentProgramCode__c &amp; &quot;&amp;sfProgramName=&quot; &amp; StudentProgramName__c ,&apos; &apos;,&apos;%20&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Evaluation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObservationMainType__c</fullName>
        <description>This tells whether the observation is an observation, mid-term or final based on the Observation Type</description>
        <formula>IF(  BEGINS(TEXT(ObservationType__c) , &apos;Final&apos;),&apos;Final&apos;,   
       IF( BEGINS(TEXT(ObservationType__c) , &apos;Midterm&apos;) ,&apos;Midterm&apos; ,
              IF( BEGINS(TEXT(ObservationType__c) , &apos;Observation&apos;) ,&apos;Observation&apos; ,NULL  )
       )   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Observation Main Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObservationMidtermURL__c</fullName>
        <formula>&quot;https://wguir.us.qualtrics.com/SE/?SID=&quot; &amp; Substitute( 
if(NewProfessionalDomain__c , &quot;SV_00Yqm81DKoHNvCZ&quot; , 
case(Student__r.ProgramCode__c, 
&quot;EDL&quot;,&quot;SV_b3OnKxO366H1TlH&quot;, 
&quot;MSEDL&quot;,&quot;SV_b3OnKxO366H1TlH&quot;, 
&quot;ENDEDL&quot;,&quot;SV_b3OnKxO366H1TlH&quot; , 
&quot;BASP&quot;, &quot;SV_00Yqm81DKoHNvCZ&quot;,	
&quot;SV_001GqfgmkKapMhf&quot; 
)	
) 
&amp; &quot;&amp;sfFieldExperience=&quot; &amp; FieldExperience__r.Id &amp; &quot;&amp;sfName=&quot; &amp; Substitute(StudentFullName__c,&apos; &apos;,&apos;%20&apos;) &amp; &quot;&amp;sfCSEmail=&quot; &amp; ClinicalSupervisor__r.Email &amp; &quot;&amp;sfHTEmail=&quot; &amp; HostTeacher__r.Email &amp; &quot;&amp;sfStuEmail=&quot; &amp; Student__r.Email &amp; &quot;&amp;sfState=&quot; &amp; text(FieldExperience__r.State__c) &amp; &quot;&amp;sfProgram=&quot;&amp; StudentProgramCode__c &amp; &quot;&amp;sfProgramName=&quot; &amp; StudentProgramName__c ,&apos; &apos;,&apos;%20&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Midterm Evaluation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObservationNum__c</fullName>
        <description>This field calculates the number of observation from the observation type</description>
        <formula>IF( CONTAINS(TEXT(ObservationType__c), &apos;Additional&apos;),7,IF( BEGINS( TEXT(ObservationType__c), &apos;Observation&apos;), VALUE(RIGHT(TEXT(ObservationType__c),1)),NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the observation number if there is one (some, like evaluations, do not have a number)</inlineHelpText>
        <label>Observation Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObservationNumber__c</fullName>
        <label>Observation Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObservationOutcome__c</fullName>
        <description>Indicates the final result on this Field Experience Process record</description>
        <inlineHelpText>Indicates the final result on this Field Experience Process record</inlineHelpText>
        <label>Observation Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed but Watch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObservationSource__c</fullName>
        <description>Whether the Observation Came from the Clinical Supervisor or the Host Teacher</description>
        <inlineHelpText>Whether the Observation Came from the Clinical Supervisor or the Host Teacher</inlineHelpText>
        <label>Observation Source</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Teacher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObservationStatus__c</fullName>
        <description>Indicates the current phase this Field Experience Process is in</description>
        <inlineHelpText>Indicates the current phase this Field Experience Process is in</inlineHelpText>
        <label>Observation Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Teacher Success Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed by Teacher Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placeholder 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placeholder 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Reply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObservationType__c</fullName>
        <description>The observation number / type.</description>
        <inlineHelpText>Indicates the type of observation or evaluation</inlineHelpText>
        <label>Observation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Final - Clinical Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final – CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final EDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final ELL &amp; MSSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midterm EDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCSS Midterm Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCSS Final Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation BASP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation BASP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation BASP 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation BASP – Extra 1 (if required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation BASP – Extra 2 (if required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation EDL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation EDL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation ELL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation ELL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation ELL – Additional 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation MSSP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation MSSP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation MSSP 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation MSSP 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation MSSP 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation MSSP 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation MSSP – Extra 1 (if required)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObservationURL__c</fullName>
        <formula>&quot;https://wguir.us.qualtrics.com/SE/?SID=&quot; &amp; Substitute( 
if(NewProfessionalDomain__c , 
case(Student__r.ProgramCode__c, 
&quot;BAISK8&quot;, &quot;SV_5c1KS5mVoWb4OuV&quot;, 
&quot;PBELK8&quot;, &quot;SV_5c1KS5mVoWb4OuV&quot;, 
&quot;MATELK8&quot;,&quot;SV_5c1KS5mVoWb4OuV&quot;, 
&quot;PBMA12&quot;,&quot;SV_bmCMRU8H6KFDNjv&quot;, 
&quot;PBMA9&quot;, &quot;SV_bmCMRU8H6KFDNjv&quot;, 
&quot;MATMA12&quot;,&quot;SV_bmCMRU8H6KFDNjv&quot;, 
&quot;MATMA9&quot;, &quot;SV_bmCMRU8H6KFDNjv&quot;, 
&quot;BAMA9&quot;, &quot;SV_bmCMRU8H6KFDNjv&quot;, 
&quot;BAMA12&quot;,&quot;SV_bmCMRU8H6KFDNjv&quot;, 
&quot;BASCPH12&quot;, &quot;SV_ac53y9yxk3hajAN&quot;, 
&quot;BASCG12&quot;, &quot;SV_ac53y9yxk3hajAN&quot;, 
&quot;BASCB12&quot;, &quot;SV_ac53y9yxk3hajAN&quot;, 
&quot;BASC9&quot;, &quot;SV_ac53y9yxk3hajAN&quot;, 
&quot;BASCCH12&quot;, &quot;SV_ac53y9yxk3hajAN&quot;, 
&quot;BASP&quot;,&quot;SV_5c1KS5mVoWb4OuV&quot;, 
&quot;SV_5c1KS5mVoWb4OuV&quot; ), 
case(Student__r.ProgramCode__c, 
&quot;EDL&quot;,&quot;SV_eWknEzWmpPJyJff&quot;, 
&quot;MSEDL&quot;,&quot;SV_eWknEzWmpPJyJff&quot;, 
&quot;ENDEDL&quot;, &quot;SV_eWknEzWmpPJyJff&quot;, 
&quot;ELL&quot;, &quot;SV_1FB68s95U5IrEY4&quot;, 
&quot;ENDELL&quot;, &quot;SV_1FB68s95U5IrEY4&quot;, 
&quot;MAELL&quot;, &quot;SV_1FB68s95U5IrEY4&quot;, 
&quot;MAELLP12&quot;,&quot;SV_1FB68s95U5IrEY4&quot;, 
&quot;MSSP&quot;,&quot;SV_2mkgth34yIaZNU9&quot;, 
&quot;SV_eSgNmK7CvZKJHMx&quot; 
) 
) 
&amp; &quot;&amp;sfFieldExperience=&quot; &amp; FieldExperience__r.Id &amp; &quot;&amp;sfName=&quot; &amp; Substitute(StudentFullName__c,&apos; &apos;,&apos;%20&apos;) &amp; &quot;&amp;sfCSEmail=&quot; &amp; ClinicalSupervisor__r.Email &amp; &quot;&amp;sfHTEmail=&quot; &amp; HostTeacher__r.Email &amp; &quot;&amp;sfStuEmail=&quot; &amp; Student__r.Email &amp; &quot;&amp;sfState=&quot; &amp; text(FieldExperience__r.State__c) &amp; &quot;&amp;sfProgram=&quot;&amp; StudentProgramCode__c &amp; &quot;&amp;sfProgramName=&quot; &amp; StudentProgramName__c ,&apos; &apos;,&apos;%20&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Observation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallCommentforObservations__c</fullName>
        <label>Overall Comment for Observations</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OverallComments__c</fullName>
        <description>Field for overall comments from observation form</description>
        <label>Overall Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PayeeCity__c</fullName>
        <formula>CASE($RecordType.Name,

    &quot;Placement Attempt&quot;, 
     IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;,  HostTeacher__r.MailingCity, 
     IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingCity, 
          IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;, School__r.ShippingCity, NULL))),

     &quot;Placement Attempt Locked&quot;, 
     IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;,  HostTeacher__r.MailingCity, 
     IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingCity, 
          IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;, School__r.ShippingCity, NULL))),

  &quot;CS Request&quot;, ClinicalSupervisor__r.MailingCity,
  
  &quot;CS Request Locked&quot;, ClinicalSupervisor__r.MailingCity,  null

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeFirstName__c</fullName>
        <label>Payee First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeLastName__c</fullName>
        <label>Payee Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeState__c</fullName>
        <formula>CASE($RecordType.Name,

    &quot;Placement Attempt&quot;, 
     IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;, HostTeacher__r.MailingState, 
     IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingState, 
          IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  School__r.ShippingState, NULL))),

     &quot;Placement Attempt Locked&quot;, 
     IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;, HostTeacher__r.MailingState, 
     IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingState, 
          IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  School__r.ShippingState, NULL))),

  &quot;CS Request&quot;,  ClinicalSupervisor__r.MailingState ,
  
  &quot;CS Request Locked&quot;, ClinicalSupervisor__r.MailingState ,  null

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeStreet1__c</fullName>
        <formula>CASE($RecordType.Name,

    &quot;Placement Attempt&quot;, 
     IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,   &quot; c/o &quot; +   District__r.Name,
          IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  &quot;c/o &quot; +   School__r.Name, NULL)),

     &quot;Placement Attempt Locked&quot;, 
    IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,   &quot; c/o &quot; +   District__r.Name,
          IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  &quot;c/o &quot; +   School__r.Name, NULL)),

NULL

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Street 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeStreet2__c</fullName>
        <formula>CASE($RecordType.Name, 

&quot;Placement Attempt&quot;, 
IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;, HostTeacher__r.MailingStreet, 
IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingStreet ,
IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  School__r.ShippingStreet,NULL))), 

&quot;Placement Attempt Locked&quot;, 
IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;, HostTeacher__r.MailingStreet, 
IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingStreet ,
IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  School__r.ShippingStreet,NULL))), 

&quot;CS Request&quot;,  ClinicalSupervisor__r.MailingStreet , 

&quot;CS Request Locked&quot;, ClinicalSupervisor__r.MailingStreet , null 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Street 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeZip__c</fullName>
        <formula>CASE($RecordType.Name, 

&quot;Placement Attempt&quot;, 
IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;, HostTeacher__r.MailingPostalCode, 
IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingPostalCode , 
IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  School__r.ShippingPostalCode, NULL))), 

&quot;Placement Attempt Locked&quot;, 
IF( TEXT(CheckSendTo__c) = &quot;Home Address&quot;, HostTeacher__r.MailingPostalCode, 
IF( TEXT(CheckSendTo__c) = &quot;District Address&quot;,  District__r.ShippingPostalCode , 
IF(TEXT(CheckSendTo__c) =&quot;School Address&quot;,  School__r.ShippingPostalCode, NULL))), 

&quot;CS Request&quot;,   ClinicalSupervisor__r.MailingPostalCode , 

&quot;CS Request Locked&quot;, ClinicalSupervisor__r.MailingPostalCode  , null 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlacementOutcome__c</fullName>
        <inlineHelpText>Check the appropriate response when nothing further needs to be done with this Placement Attempt, i.e., Confirmed = school, district, HT, grade, subject, length and payment info.</inlineHelpText>
        <label>Placement Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PlacementStatus__c</fullName>
        <description>What stage is the placement process in?  Did the student create a NEW placement attempt from the Field Experience Portal?</description>
        <inlineHelpText>New = Just created, have not begun working this placement
In Progress = Working on Placement
Closed = Either Placement is complete or no longer working on this placement.</inlineHelpText>
        <label>Placement Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PlacementType__c</fullName>
        <label>Placement Type</label>
        <picklist>
            <picklistValues>
                <fullName>DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSEDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PoinofContact__c</fullName>
        <label>Point of Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PreferredPriority__c</fullName>
        <inlineHelpText>The student&apos;s prioritization on where they would like to be placed.  Lower numbers are higher priority.</inlineHelpText>
        <label>Preferred Priority</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessStatusStudent__c</fullName>
        <formula>IF( $RecordType.Name = &apos;Placement Attempt&apos;, 
       ( 
           IF( ISPICKVAL(PlacementStatus__c, &apos;New&apos; ), &apos;Received&apos;, 
              ( 
                  IF( ISPICKVAL(PlacementStatus__c, &apos;Started&apos; ), &apos;In Progress&apos;,
                     ( 
                         IF( ISPICKVAL( PlacementStatus__c, &apos;Closed&apos; ) &amp;&amp; ISPICKVAL( PlacementOutcome__c, &apos;Accepted&apos; ), &apos;Successful&apos;,
                            (
                                IF( ISPICKVAL( PlacementStatus__c, &apos;Closed&apos; ), &apos;Unsuccessful&apos;, &apos;In Progress&apos; )
                            )
                     )
              )
       )))), null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Status Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionalAppearance__c</fullName>
        <label>Professional Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>1 &quot;2&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;2&quot; Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 &quot;1&quot; Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 &quot;1&quot; Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVIDMatch__c</fullName>
        <description>This field determines whether or not the incoming ID from the survey matches the ID that exists on this record.  If it does Y if not N.</description>
        <formula>if(SVID__c  = StudentBannerID__c, &apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field determines whether or not the incoming ID from the survey matches the ID that exists on this record.  If it does Y if not N.</inlineHelpText>
        <label>SV ID Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVID__c</fullName>
        <description>The identifier from the survey used to verify that it was filled out for the right person</description>
        <inlineHelpText>The identifier from the survey used to verify that it was filled out for the right person</inlineHelpText>
        <label>SV ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMin1__c</fullName>
        <description>The minimum of the first score group from the survey</description>
        <formula>Min( BLANKVALUE(if(VALUE( SVQ30__c )=0,4,VALUE( SVQ30__c )),4),
BLANKVALUE(if(VALUE( SVQ31__c )=0,4,VALUE( SVQ31__c )),4),
BLANKVALUE(if(VALUE( SVQ32__c )=0,4,VALUE( SVQ32__c )),4),
BLANKVALUE(if(VALUE( SVQ33__c )=0,4,VALUE( SVQ33__c )),4),
BLANKVALUE(if(VALUE( SVQ34__c )=0,4,VALUE( SVQ34__c )),4),
BLANKVALUE(if(VALUE( SVQ35__c )=0,4,VALUE( SVQ35__c )),4),
BLANKVALUE(if(VALUE( SVQ36__c )=0,4,VALUE( SVQ36__c )),4),
BLANKVALUE(if(VALUE( SVQ37__c )=0,4,VALUE( SVQ37__c )),4),
BLANKVALUE(if(VALUE( SVQ38__c )=0,4,VALUE( SVQ38__c )),4),
BLANKVALUE(if(VALUE( SVQ39__c )=0,4,VALUE( SVQ39__c )),4),
BLANKVALUE(if(VALUE( SVQ40__c )=0,4,VALUE( SVQ40__c )),4),
BLANKVALUE(if(VALUE( SVQ41__c )=0,4,VALUE( SVQ41__c )),4),
BLANKVALUE(if(VALUE( SVQ42__c )=0,4,VALUE( SVQ42__c )),4),
BLANKVALUE(if(VALUE( SVQ43__c )=0,4,VALUE( SVQ43__c )),4),
BLANKVALUE(if(VALUE( SVQ44__c )=0,4,VALUE( SVQ44__c )),4),
BLANKVALUE(if(VALUE( SVQ45__c )=0,4,VALUE( SVQ45__c )),4),
BLANKVALUE(if(VALUE( SVQ46__c )=0,4,VALUE( SVQ46__c )),4),
BLANKVALUE(if(VALUE( SVQ47__c )=0,4,VALUE( SVQ47__c )),4),
BLANKVALUE(if(VALUE( SVQ48__c )=0,4,VALUE( SVQ48__c )),4),
BLANKVALUE(if(VALUE( SVQ49__c )=0,4,VALUE( SVQ49__c )),4),
BLANKVALUE(if(VALUE( SVQ50__c )=0,4,VALUE( SVQ50__c )),4),
BLANKVALUE(if(VALUE( SVQ51__c )=0,4,VALUE( SVQ51__c )),4),
BLANKVALUE(if(VALUE( SVQ52__c )=0,4,VALUE( SVQ52__c )),4),
BLANKVALUE(if(VALUE( SVQ53__c )=0,4,VALUE( SVQ53__c )),4),
BLANKVALUE(if(VALUE( SVQ54__c )=0,4,VALUE( SVQ54__c )),4),
BLANKVALUE(if(VALUE( SVQ55__c )=0,4,VALUE( SVQ55__c )),4),
BLANKVALUE(if(VALUE( SVQ56__c )=0,4,VALUE( SVQ56__c )),4),
BLANKVALUE(if(VALUE( SVQ57__c )=0,4,VALUE( SVQ57__c )),4),
BLANKVALUE(if(VALUE( SVQ58__c )=0,4,VALUE( SVQ58__c )),4),
BLANKVALUE(if(VALUE( SVQ59__c )=0,4,VALUE( SVQ59__c )),4),
BLANKVALUE(if(VALUE( SVQ60__c )=0,4,VALUE( SVQ60__c )),4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SV Min 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMin2__c</fullName>
        <description>Temporary variable to hold minimum value from survey, for 1-30</description>
        <label>SV Min 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVOverallMin__c</fullName>
        <description>The overall minimum of the survey sections</description>
        <formula>Min(  SVMin1__c  , SVMin2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SV Overall Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVQ10__c</fullName>
        <description>Survey Question 10 Response</description>
        <label>SV Q10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVQ11__c</fullName>
        <description>Survey Question 11 Response</description>
        <label>SV Q11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVQ12__c</fullName>
        <description>Survey Question 12 Response</description>
        <label>SV Q12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVQTotalZeros__c</fullName>
        <formula>IF(OR(SVQ1__c= &quot;0&quot;, SVQ1__c= NULL),1,0) 
+IF(OR(SVQ2__c= &quot;0&quot;, SVQ2__c= NULL),1,0) 
+IF(OR(SVQ3__c= &quot;0&quot;, SVQ3__c= NULL),1,0) 
+IF(OR(SVQ4__c= &quot;0&quot;, SVQ4__c= NULL),1,0) 
+IF(OR(SVQ5__c= &quot;0&quot;, SVQ5__c= NULL),1,0) 
+IF(OR(SVQ6__c= &quot;0&quot;, SVQ6__c= NULL),1,0) 
+IF(OR(SVQ7__c= &quot;0&quot;, SVQ7__c= NULL),1,0) 
+IF(OR(SVQ8__c= &quot;0&quot;, SVQ8__c= NULL),1,0) 
+IF(OR(SVQ9__c= &quot;0&quot;, SVQ9__c= NULL),1,0) 
+IF(OR(SVQ10__c= &quot;0&quot;, SVQ10__c= NULL),1,0) 
+IF(OR(SVQ11__c= &quot;0&quot;, SVQ11__c= NULL),1,0) 
+IF(SVQ12__c=&quot;0&quot;,1,0) 
+IF(SVQ13__c=&quot;0&quot;,1,0) 
+IF(SVQ14__c=&quot;0&quot;,1,0) 
+IF(SVQ15__c=&quot;0&quot;,1,0) 
+IF(SVQ16__c=&quot;0&quot;,1,0) 
+IF(SVQ17__c=&quot;0&quot;,1,0) 
+IF(SVQ18__c=&quot;0&quot;,1,0) 
+IF(SVQ19__c=&quot;0&quot;,1,0) 
+IF(SVQ20__c=&quot;0&quot;,1,0) 
+IF(SVQ21__c=&quot;0&quot;,1,0) 
+IF(SVQ22__c=&quot;0&quot;,1,0) 
+IF(SVQ23__c=&quot;0&quot;,1,0) 
+IF(SVQ24__c=&quot;0&quot;,1,0) 
+IF(SVQ25__c=&quot;0&quot;,1,0) 
+IF(SVQ26__c=&quot;0&quot;,1,0) 
+IF(SVQ27__c=&quot;0&quot;,1,0) 
+IF(SVQ28__c=&quot;0&quot;,1,0) 
+IF(SVQ29__c=&quot;0&quot;,1,0) 
+IF(SVQ30__c=&quot;0&quot;,1,0) 
+IF(SVQ31__c=&quot;0&quot;,1,0) 
+IF(SVQ32__c=&quot;0&quot;,1,0) 
+IF(SVQ33__c=&quot;0&quot;,1,0) 
+IF(SVQ34__c=&quot;0&quot;,1,0) 
+IF(SVQ35__c=&quot;0&quot;,1,0) 
+IF(SVQ36__c=&quot;0&quot;,1,0) 
+IF(SVQ37__c=&quot;0&quot;,1,0) 
+IF(SVQ38__c=&quot;0&quot;,1,0) 
+IF(SVQ39__c=&quot;0&quot;,1,0) 
+IF(SVQ40__c=&quot;0&quot;,1,0) 
+IF(SVQ41__c=&quot;0&quot;,1,0) 
+IF(SVQ42__c=&quot;0&quot;,1,0) 
+IF(SVQ43__c=&quot;0&quot;,1,0) 
+IF(SVQ44__c=&quot;0&quot;,1,0) 
+IF(SVQ45__c=&quot;0&quot;,1,0) 
+IF(SVQ46__c=&quot;0&quot;,1,0) 
+IF(SVQ47__c=&quot;0&quot;,1,0) 
+IF(SVQ48__c=&quot;0&quot;,1,0) 
+IF(SVQ49__c=&quot;0&quot;,1,0) 
+IF(SVQ50__c=&quot;0&quot;,1,0) 
+IF(SVQ51__c=&quot;0&quot;,1,0) 
+IF(SVQ52__c=&quot;0&quot;,1,0) 
+IF(SVQ53__c=&quot;0&quot;,1,0) 
+IF(SVQ54__c=&quot;0&quot;,1,0) 
+IF(SVQ55__c=&quot;0&quot;,1,0) 
+IF(SVQ56__c=&quot;0&quot;,1,0) 
+IF(SVQ57__c=&quot;0&quot;,1,0) 
+IF(SVQ58__c=&quot;0&quot;,1,0) 
+IF(SVQ59__c=&quot;0&quot;,1,0) 
+IF(SVQ60__c=&quot;0&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVQ Total Zeros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>